--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "rm -rf dist && cd ../fullstackopen/osa2/puhelinluettelo && npm run build && cp -r dist/ ../../../fullstackopen_osa3_nodeapp/",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push -u origin main"
   },
   "author": "Roope Salminen",
   "license": "MIT",
